AlgorithmExecutionResource: use new HibernateUtil